@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.11.5-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-11-05 16:06:12, took 00:11:03, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2025-11-05 16:46:29, took 00:13:25, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
